--- a/pom.xml
+++ b/pom.xml
@@ -1,96 +1,108 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>org.jenkins-ci.plugins</groupId>
-		<artifactId>plugin</artifactId>
-		<version>2.29</version>
-	</parent>
+    <parent>
+        <groupId>org.jenkins-ci.plugins</groupId>
+        <artifactId>plugin</artifactId>
+        <version>2.29</version>
+    </parent>
 
-	<groupId>org.jenkins-ci.plugins</groupId>
-	<artifactId>coverage-publisher</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
-	<packaging>hpi</packaging>
-	<name>Coverage Publisher Plugin</name>
-	<description>Generic Code Coverage publisher plugin for Jenkins</description>
-	<url>https://wiki.jenkins-ci.org/display/JENKINS/Coverage+Publisher+Plugin</url>
+    <groupId>org.jenkins-ci.plugins</groupId>
+    <artifactId>coverage-publisher</artifactId>
+    <version>0.1.0-SNAPSHOT</version>
+    <packaging>hpi</packaging>
+    <name>Coverage Publisher Plugin</name>
+    <description>Generic Code Coverage publisher plugin for Jenkins</description>
+    <url>https://wiki.jenkins-ci.org/display/JENKINS/Coverage+Publisher+Plugin</url>
 
-	<properties>
-		<!-- Baseline Jenkins version you use to build the plugin. Users must have 
-			this version or newer to run. -->
-		<jenkins.version>1.625.3</jenkins.version>
-		<jenkins-war.version>2.62</jenkins-war.version> <!-- Set to higher to test pipeline -->
-		<!-- Java Level to use. Java 7 required when using core >= 1.612 -->
-		<java.level>7</java.level>
-		<!-- Jenkins Test Harness version you use to test the plugin. -->
-		<!-- For Jenkins version >= 1.580.1 use JTH 2.x or higher. -->
-		<jenkins-test-harness.version>2.22</jenkins-test-harness.version>
-		<!-- Other properties you may want to use: ~ hpi-plugin.version: The HPI 
-			Maven Plugin version used by the plugin.. ~ stapler-plugin.version: The Stapler 
-			Maven plugin version required by the plugin. -->
-	</properties>
+    <properties>
+        <!-- Baseline Jenkins version you use to build the plugin. Users must have
+            this version or newer to run. -->
+        <jenkins.version>1.625.3</jenkins.version>
+        <jenkins-war.version>2.62</jenkins-war.version> <!-- Set to higher to test pipeline -->
+        <!-- Java Level to use. Java 7 required when using core >= 1.612 -->
+        <java.level>7</java.level>
+        <!-- Jenkins Test Harness version you use to test the plugin. -->
+        <!-- For Jenkins version >= 1.580.1 use JTH 2.x or higher. -->
+        <jenkins-test-harness.version>2.22</jenkins-test-harness.version>
+        <!-- Other properties you may want to use: ~ hpi-plugin.version: The HPI
+            Maven Plugin version used by the plugin.. ~ stapler-plugin.version: The Stapler
+            Maven plugin version required by the plugin. -->
+        <jacoco.version>0.7.9</jacoco.version>
+    </properties>
 
-	<licenses>
-		<license>
-			<name>GPLv3 License</name>
-			<url>http://www.gnu.org/licenses/gpl-3.0.html</url>
-		</license>
-	</licenses>
+    <licenses>
+        <license>
+            <name>GPLv3 License</name>
+            <url>http://www.gnu.org/licenses/gpl-3.0.html</url>
+        </license>
+    </licenses>
 
-	<developers>
-		<developer>
-			<id>abishek3876</id>
-			<name>Abishek Manoharan</name>
-		</developer>
-	</developers>
+    <developers>
+        <developer>
+            <id>abishek3876</id>
+            <name>Abishek M</name>
+        </developer>
+    </developers>
 
-	<scm>
-		<connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
-		<developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
-		<url>http://github.com/jenkinsci/${project.artifactId}-plugin</url>
-	</scm>
+    <scm>
+        <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
+        <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
+        <url>http://github.com/jenkinsci/${project.artifactId}-plugin</url>
+    </scm>
 
-	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-release-plugin</artifactId>
-				<version>2.5.1</version>
-				<configuration>
-					<goals>deploy</goals>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.1</version>
+                <configuration>
+                    <goals>deploy</goals>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
-	<repositories>
-		<repository>
-			<id>repo.jenkins-ci.org</id>
-			<url>https://repo.jenkins-ci.org/public/</url>
-		</repository>
-	</repositories>
-	<pluginRepositories>
-		<pluginRepository>
-			<id>repo.jenkins-ci.org</id>
-			<url>https://repo.jenkins-ci.org/public/</url>
-		</pluginRepository>
-	</pluginRepositories>
+    <repositories>
+        <repository>
+            <id>repo.jenkins-ci.org</id>
+            <url>https://repo.jenkins-ci.org/public/</url>
+        </repository>
+    </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>repo.jenkins-ci.org</id>
+            <url>https://repo.jenkins-ci.org/public/</url>
+        </pluginRepository>
+    </pluginRepositories>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.jenkins-ci.plugins</groupId>
-			<artifactId>structs</artifactId>
-			<version>1.10</version>
-		</dependency>
+    <dependencies>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>structs</artifactId>
+            <version>1.10</version>
+        </dependency>
 
-		<!-- Test Scopes -->
-		<dependency>
-			<groupId>org.jenkins-ci.plugins.workflow</groupId>
-			<artifactId>workflow-job</artifactId>
-			<version>2.14.1</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.jacoco</groupId>
+            <artifactId>org.jacoco.report</artifactId>
+            <version>${jacoco.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.plexus</groupId>
+            <artifactId>plexus-utils</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
+        <!-- Test Scopes -->
+        <dependency>
+            <groupId>org.jenkins-ci.plugins.workflow</groupId>
+            <artifactId>workflow-job</artifactId>
+            <version>2.14.1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 </project>
