--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
     "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "browserify": "^14.4.0",
+    "browserify-css": "^0.12.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
     "gulp-sourcemaps": "^2.6.1",
+    "gulp-uglify": "^3.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
-    "@jenkins-cd/design-language": "0.0.157",
-    "browserify-css": "^0.12.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router": "^2.8.1",
     "recharts": "^1.0.0-apha.5"
   }
 }
