--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "gulp-babel": "^7.0.0",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-uglify": "^3.0.0",
+    "uglifyify": "^4.0.5",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "recharts": "^1.0.0-beta.0"
+    "recharts": "^1.0.0-beta.6"
   }
 }
